# fem2D

./: CMakeLists.txt  aaTri.node  aaTriTest.json  box.1.ele  box.1.node  box.1.poly  box.2.ele  box.2.node  box.2.poly  box.3.ele  box.3.node  box.3.poly  box.poly  boxTest0.json  boxTest1.json  boxTest2.json  boxTest3.json  boxTest4.json  boxText.json  cghs.h  eigenTypedefs.h  femApp.cpp  femMesh.cpp  femMesh.h  particleSystem.cpp  planeObstacle.cpp  planeObstacle.h  range.h  readNodeAndEle.cpp  readNodeAndEle.h  readObj.cpp  readObj.h  ring.1.ele  ring.1.node  ring.1.poly  ring.poly  ring1.json  ringNoBreak.json  ringTest.json  stiffnessMatrix.cpp  (+9 more)
